# itcha-backend

./: .gitignore  pyproject.toml
apps/board/: urls.py
apps/board/filtersets/: application.py  recruitment.py
apps/board/migrations/: 0001_initial.py  0002_alter_field_updated_at_alter_recruitment_updated_at_and_more.py  0003_application_applicationfield_and_more.py
apps/board/models/: __init__.py  application.py  application_field.py  field.py  recruitment.py  recruitment_field.py
apps/board/serializers/: application.py  application_field.py  field.py  recruitment.py  recruitment_field.py
apps/board/views/: application.py  recruitment.py
apps/core/: urls.py
apps/core/common/: pagination.py
apps/core/common/models/: base_model.py  softdeletable_model.py  timestamped_model.py
apps/core/common/serializers/: base_serializerl.py
apps/core/filtersets/: member.py
apps/core/migrations/: 0001_initial.py  0002_remove_user_deleted_at.py  0003_alter_user_updated_at.py
apps/core/models/: user.py
apps/core/serializers/: login.py  member.py  user.py
apps/core/views/: check.py  login.py  member.py  token.py
config/: settings.py  urls.py
